--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/cars
+spring.datasource.url=jdbc:mysql://localhost:3306/films
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=""
 spring.jpa.hibernate.ddl-auto=create
 
 spring.view.prefix: /WEB-INF/views/
